--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,16 @@
             <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -37,5 +46,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
